# back-backoffice

./: README.md  pyproject.toml
.github/: dependabot.yml
app/: main.py  settings.py  version.py
app/authentication/: routers.py  schemas.py
app/database/: __init__.py  base.py  collections.py
app/services/: __init__.py  security.py
app/users/: models.py  routers.py  schemas.py
