[tool.poetry]
name = "backoffice"
version = "0.1.0"
description = ""
authors = ["marlonmartins2 <marlon.azevedo.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pymongo = "^4.6.2"
pydantic-settings = "^2.2.1"
email-validator = "^2.1.1"
pyyaml = "^6.0.1"
pyjwt = "^2.8.0"
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
